// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component Button > snapshot: Button with onClick and disabled 1`] = `
<button
  class="_button_0829c1"
  data-testid="click-btn"
  disabled=""
>
  Processing...
</button>
`;

exports[`Component Button > snapshot: Button with onClick and without disabled 1`] = `
<button
  class="_button_0829c1"
  data-testid="click-btn"
>
  Press me
</button>
`;
